feat: 增加关于页面模板

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "@cnic/monitor",
   "appId": "monitor",
   "defaultPort": 9030,
+  "appPath": "/my/monitor",
   "description": "Micro Frontend",
   "productName": "Micro Frontend",
   "author": "mimas",
