--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.6.5",
     "echarts": "^5.4.2",
     "jwt-decode": "^3.1.2",
+    "normalizr": "^3.6.2",
     "pinia": "^2.0.11",
     "qs": "^6.11.0",
     "quasar": "^2.11.5",
