--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@antv/g6": "^4.8.17",
     "@quasar/extras": "^1.15.10",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "echarts": "^5.4.2",
+    "insert-css": "^2.0.0",
     "jwt-decode": "^3.1.2",
     "normalizr": "^3.6.2",
     "pinia": "^2.0.11",
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "@quasar/app-webpack": "^3.7.1",
+    "@types/insert-css": "^2.0.1",
     "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
